# paramath3

./: .gitignore  LICENSE  README.md  cli.py  cli.sync-conflict-20260207-084925-GRDY4MJ.py  colors.py  math.txt  mockup.pm3  paramath.py  paramath3.py  paramath_docs (v2 for ref).md  paramath_docs_developers.md  paramath_syntax_guide.md  parse_line.py  pyproject.toml  test.pm3  test.py  text.py
__multifile/pm3/: __init__.py  ast_gen.py  ast_transform.py  ast_utils.py  codegen.py  compiler.py  config.py  logging.py  parser.py  simplify.py  tokenizer.py  validation.py
archive_onefile/: cli.py
docs/: paramath_docs_developers.md  paramath_syntax_guide.md
paramath3.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
paramath_test/: aliasing.pm3  cache_test.pm3  dupe_test.pm3  edge_cases.pm3  functions.pm3  identity_simplification.pm3  literal_simplification.pm3  loops.pm3  multiline.pm3  operator_expansion.pm3  python_parse.pm3  repeats.pm3  sympy_integration.pm3
paramath_test/examples/: number_test.pm3
pm3/: constants.py  dedupe.py  pragma.py  simplify.py  sympy_utils.py  utils.py
tests/: pm_test_suite.py
